--- a/ZoneRV.Services.TrelloProduction/ZoneRV.Services.TrelloProduction.csproj
+++ b/ZoneRV.Services.TrelloProduction/ZoneRV.Services.TrelloProduction.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ZoneRV.DataAccess\ZoneRV.DataAccess.csproj" />
       <ProjectReference Include="..\ZoneRV\ZoneRV.csproj" />
     </ItemGroup>
 
