Made lots of changes tests are broken

--- a/ZoneRV.DataAccess/ZoneRV.DataAccess.csproj
+++ b/ZoneRV.DataAccess/ZoneRV.DataAccess.csproj
@@ -17,4 +17,14 @@
       <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ZoneRV\ZoneRV.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Data\" />
+      <Folder Include="DbAccess\" />
+      <Folder Include="Models\Enums\" />
+    </ItemGroup>
+
 </Project>
