--- a/ZoneRV.Services.Trello/ZoneRV.Services.Trello.csproj
+++ b/ZoneRV.Services.Trello/ZoneRV.Services.Trello.csproj
@@ -26,4 +26,10 @@
       <PackageReference Include="TrelloDotNet" Version="1.11.5" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Mvc.Core">
+        <HintPath>..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\8.0.11\Microsoft.AspNetCore.Mvc.Core.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
