--- a/ZoneRV/ZoneRV.csproj
+++ b/ZoneRV/ZoneRV.csproj
@@ -54,4 +54,8 @@
         <PackageReference Include="FishbowlSQL" Version="0.1.1-preview2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Attributes\" />
+    </ItemGroup>
+
 </Project>
