Refactor update models, add IBaseUpdate interface, and more
Standardized update models by implementing IBaseUpdate interface. Introduced new global using directives, added XML comments for clarity, and updated test coverage for VanNameRegex. Renamed ProductionContext for better organization and added a global.json file specifying .NET 9.0 SDK.

--- a/ZoneRV.Api/ZoneRV.Api.csproj
+++ b/ZoneRV.Api/ZoneRV.Api.csproj
@@ -4,8 +4,8 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <UserSecretsId>aspnet-WebApplication1-ef38a072-92f8-4bf0-be7a-e3cdcb3d671d</UserSecretsId>
-        <RootNamespace>WebApplication1</RootNamespace>
+        <UserSecretsId>aspnet-ZoneRV-ef38a072-92f8-4bf0-be7a-e3cdcb3d671d</UserSecretsId>
+        <RootNamespace>ZoneRV.Api</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
