Add JSON serialization enhancements and filtering support on api side
Introduced `FilterableFieldAttribute` and `JsonFieldContractResolver` for selective JSON serialization. Updated models and controllers to utilize these features, enabling field-level filtering in API responses. Added `UseJsonFieldSerializerAttribute` for streamlined integration.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ riderModule.iml
 
 /ZoneRV.Api/appsettings.json
 /ZoneRV.Api/appsettings.Development.json
+/ZoneRV.Api/Properties/launchSettings.json
 
 # User-specific files
 *.rsuser
