--- a/ZoneRV/ZoneRV.csproj
+++ b/ZoneRV/ZoneRV.csproj
@@ -28,6 +28,7 @@
 
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.1.35" />
+      <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.3.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1">
         <PrivateAssets>all</PrivateAssets>
@@ -52,10 +53,6 @@
       <PackageReference Include="Serilog" Version="4.2.0" />
       <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
         <PackageReference Include="FishbowlSQL" Version="0.1.1-preview2" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Attributes\" />
     </ItemGroup>
 
 </Project>
