Added requesting multiple sales orders

--- a/ZoneRV.Api/ZoneRV.Api.csproj
+++ b/ZoneRV.Api/ZoneRV.Api.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
+        <WarningsAsErrors>nullable</WarningsAsErrors>
         <ImplicitUsings>enable</ImplicitUsings>
         <UserSecretsId>aspnet-ZoneRV-ef38a072-92f8-4bf0-be7a-e3cdcb3d671d</UserSecretsId>
         <RootNamespace>ZoneRV.Api</RootNamespace>
