--- a/ZoneRV.Api/ZoneRV.Api.csproj
+++ b/ZoneRV.Api/ZoneRV.Api.csproj
@@ -7,7 +7,14 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <UserSecretsId>aspnet-ZoneRV-ef38a072-92f8-4bf0-be7a-e3cdcb3d671d</UserSecretsId>
         <RootNamespace>ZoneRV.Api</RootNamespace>
-        <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+      <NoWarn>1701;1702;1591</NoWarn>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+      <NoWarn>1701;1702;1591</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
