--- a/ZoneRV.Api/ZoneRV.Api.csproj
+++ b/ZoneRV.Api/ZoneRV.Api.csproj
@@ -18,6 +18,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Figgle" Version="0.5.1" />
         <PackageReference Include="MartinCostello.OpenApi.Extensions" Version="1.0.0" />
         <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.3.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.1" />
