Started adding basic test production service

--- a/ZoneRV.Api/ZoneRV.Api.csproj
+++ b/ZoneRV.Api/ZoneRV.Api.csproj
@@ -47,6 +47,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ZoneRV.Services.Test\ZoneRV.Services.Test.csproj" />
       <ProjectReference Include="..\ZoneRV.Services.Trello\ZoneRV.Services.Trello.csproj" />
       <ProjectReference Include="..\ZoneRV.Migrations\ZoneRV.Migrations.csproj" />
       <ProjectReference Include="..\ZoneRV\ZoneRV.csproj" />
