Fixed up unit tests

--- a/ZoneRV.Tests/ZoneRV.Tests.csproj
+++ b/ZoneRV.Tests/ZoneRV.Tests.csproj
@@ -35,6 +35,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ZoneRV.Services.Test\ZoneRV.Services.Test.csproj" />
       <ProjectReference Include="..\ZoneRV\ZoneRV.csproj" />
     </ItemGroup>
 
@@ -42,6 +43,12 @@
       <None Update="xunit.runner.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore">
+        <HintPath>..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\9.0.1\Microsoft.AspNetCore.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
