--- a/ZoneRV.Api/ZoneRV.Api.csproj
+++ b/ZoneRV.Api/ZoneRV.Api.csproj
@@ -20,7 +20,9 @@
     <ItemGroup>
         <PackageReference Include="Figgle" Version="0.5.1" />
         <PackageReference Include="MartinCostello.OpenApi.Extensions" Version="1.0.0" />
+        <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
         <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.3.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
@@ -48,7 +50,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\ZoneRV.Services.Test\ZoneRV.Services.Test.csproj" />
-      <ProjectReference Include="..\ZoneRV.Services.Trello\ZoneRV.Services.Trello.csproj" />
+      <ProjectReference Include="..\ZoneRV.Services.Trello\ZoneRV.Services.Trello.csproj"/>
       <ProjectReference Include="..\ZoneRV.Migrations\ZoneRV.Migrations.csproj" />
       <ProjectReference Include="..\ZoneRV\ZoneRV.csproj" />
     </ItemGroup>
