--- a/ZoneRV/ZoneRV.csproj
+++ b/ZoneRV/ZoneRV.csproj
@@ -64,4 +64,10 @@
         <PackageReference Include="FishbowlSQL" Version="0.1.1-preview2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Hosting.Abstractions">
+        <HintPath>..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\9.0.1\Microsoft.Extensions.Hosting.Abstractions.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
